----------------------
Version 1.2.0 -> 1.2.1
----------------------
New Features
- EVE Avatar size is now selectable under administrator settings
- Full member Check now limits to 50 per run and cycles, Cron has built in time manager
- TS Section now works with API area disabled (good for none eve use)

Bug Fixes
- Fixed Bug with Character Selection on Profile Were if you had no API then you couldnt add 1 (Fix by monorailpilot)
- Added a command during install of package to chmod the xmlhttp file
- Fixed undefined errors due to missing skills in TEA_SkillDump.php
- Added excape for Javascript variable for when people use ' in rule names
- Fixed Error where actual user groups was used and not selected user for TS reg
- Fixed issue with overlapping copyright
- Fixed but were main character selection under TS always used default format

----------------------
Version 1.1.2 -> 1.2.0
----------------------
New Features
- TeamSpeak 3 Support, This includes Registering via User uniqueKey or being on the server and having it find you
  Also Maintains users Access, will smf and Ts group linking, and can enforce nicknames
- Added Setting of a Main Character and Improved the Realname and Avatar Setting Options
- Added TEA to profile dropdown menu

Bug Fixes
- Fixed bug that showed full forum page instead of character list when registering

----------------------
Version 1.1.1 -> 1.1.2
----------------------
New Features
- Now Supports Sockets to get data from eveonline if curl not installed

Bug Fixes
- Run Table Check on Upgrade
- Removed use of split() function as its deprecated
- Fixed Avatar to new address
- Fixed check for esam upgrade
- Added a check for open_basedir and safe_mode when using CURLOPT_FOLLOWLOCATION
- Fixed check for existing cache functions
- Removed a bunch of undefined errors
- Fixed bug were charid wasnt saved under settings
- Fixed Standing to New type (contacts)